# icefast

./: Cargo.toml  README.md
benches/: ice_bench.rs  icefast_bench.rs  icefast_bench.rs.old  ryzen_5700g_mimalloc_results.txt  ryzen_5700g_results.txt  tmp.txt
examples/: profile.rs
ice-reference/: ice-thell.rs
src/: icefast.rs  lib.rs  main.rs
tests/: icefast_test.rs
