[package]
name = "icefast"
version = "0.1.0"
edition = "2024"

[lib]
name = "icefast"
path = "src/lib.rs"

[dependencies]
# Windows alloc is noticably slower than the mimalloc allocator
mimalloc = { version = "*", default-features = false }
rayon = "1.11.0"

[dev-dependencies]
divan = "0.1.21"

[profile.release]
debug = true
lto = true
codegen-units = 1
opt-level = 3

[[bench]]
name = "icefast_bench"
harness = false
