[package]
name = "icefast"
version = "1.0.0"
edition = "2024"
authors = ["Thell Fowler <thell@tbfowler.net>"]
description = "A optimized parallel ICE encryption implementation with auto-dispatching logic and auto-vectorization."
license = "Unlicense"
homepage = "https://github.com/Thell/icefast"
repository = "https://github.com/Thell/icefast"
readme = "README.md"
keywords = ["encryption", "ice"]
categories = ["cryptography", "algorithms"]

[lib]
name = "icefast"
path = "src/lib.rs"

[dependencies]
rayon = "1.11.0"

[dev-dependencies]
divan = "0.1.21"
mimalloc = { version = "0.1", default-features = false }
rand = "0.9.2"
rand_chacha = "0.10.0"
rand_distr = "0.5.1"

[profile.release]
debug = true
lto = true
codegen-units = 1
opt-level = 3

[[bench]]
name = "icefast_bench"
harness = false
